feat: change movie search to query
